--- a/filter.mustache
+++ b/filter.mustache
@@ -662,6 +662,13 @@ enter.{{site.mf}}
 {{site.thro}}###joinLoginLink
 {{site.thro}}###commentsWrapper
 
+!! Traxxx
+# umami analytics
+||anal.{{site.traxxx}}/api/send
+# campaigns
+{{site.traxxx}}##.campaign
+{{site.traxxx}}##.nolink.watch
+
 !! TrueAmateurs
 {{site.ta}}##li:has(> a[href="/amateurswanted"])
 {{site.ta}}##li:has(> a[href$="/login"])
